@@ -1,7 +1,7 @@
 Flow
 ====
 
-Method to affect application flow.
+Methods that affect application execution flow.
 
 .. function:: T Retry<T>(Func<T> action, RetryStrategy retryStrategy, params Type[] transientExceptions)
 .. function:: Task<T> RetryAsync<T>(Func<Task<T>> action, RetryStrategy retryStrategy, CancellationToken cancellationToken, params Type[] transientExceptions)
@@ -10,15 +10,83 @@ Method to affect application flow.
 
     .. function:: CreateFixedDelayRetryStrategy(int numberOfTries, TimeSpan? delay, bool firstFastRetry)
 
-        There will be fixed time delay between every failed action call.
+        There will be fixed time delay between every failed action call. One of the simplest strategies. Here is a sample run with delays for configuration numberOfTries=10, delay=2 sec, no first fast retry:
+
+            ::
+
+                #   delay     total time
+                01: 00:00.00  00:00.00
+                02: 00:02.01  00:02.02
+                03: 00:02.01  00:04.03
+                04: 00:02.02  00:06.06
+                05: 00:02.03  00:08.09
+                06: 00:02.02  00:10.12
+                07: 00:02.02  00:12.14
+                08: 00:02.03  00:14.17
+                09: 00:02.03  00:16.21
+                10: 00:02.03  00:18.24
+
+            .. image:: flow-retry-fixed.png
 
     .. function:: CreateIncrementDelayRetryStrategy(int numberOfTries, TimeSpan? delay, TimeSpan? increment, bool firstFastRetry)
 
-        There will be incremented delay between every failed action call.
+        There will be incremented delay between every failed action call. Here is a sample run with delays for configuration numberOfTries=10, delay=2 sec, increment=1 sec, no first fast retry:
 
-    .. function::  CreateExponentialBackoffDelayRetryStrategy(int numberOfTries, TimeSpan? minBackoff, TimeSpan? maxBackoff, TimeSpan? deltaBackoff, bool firstFastRetry)
+            ::
 
-        A retry strategy with backoff parameters for calculating the exponential delay between retries.
+                #   delay     total time
+                01: 00:00.00  00:00.00
+                02: 00:03.01  00:03.02
+                03: 00:04.02  00:07.04
+                04: 00:05.03  00:12.08
+                05: 00:06.03  00:18.11
+                06: 00:07.02  00:25.14
+                07: 00:08.03  00:33.17
+                08: 00:09.03  00:42.20
+                09: 00:10.01  00:52.22
+                10: 00:11.02  01:03.25
+
+            .. image:: flow-retry-incremental.png
+
+    .. function:: CreateExponentialBackoffDelayRetryStrategy(int numberOfTries, TimeSpan? minBackoff, TimeSpan? maxBackoff, TimeSpan? deltaBackoff)
+
+        A retry strategy with backoff parameters for calculating the exponential delay between retries. Delta backoff (jitter) requires to randomize next delay. The implementation is equal to Microsoft Enterprise Library exponential backoff transient fault handling. Here is a sample run with delays for configuration numberOfTries=10, minBackoff=2 sec, maxBackoff=30 sec, no delta backoff:
+
+            ::
+
+                #   delay     total time
+                01: 00:00.00  00:00.00
+                02: 00:03.01  00:03.02
+                03: 00:05.03  00:08.05
+                04: 00:09.03  00:17.09
+                05: 00:17.03  00:34.12
+                06: 00:33.02  01:07.14
+                07: 00:35.02  01:42.17
+                08: 00:35.03  02:17.21
+                09: 00:35.03  02:52.24
+                10: 00:35.02  03:27.26
+
+            .. image:: flow-retry-exp.png
+
+    .. function:: CreateExponentialBackoffNormalizedDelayRetryStrategy(int numberOfTries, TimeSpan? minBackoff, TimeSpan? maxBackoff)
+
+        A retry strategy with backoff parameters for calculating the exponential delay between retries. Normalized version scales exponential delay depends on numberOfTries. Here is a sample run with delays for configuration numberOfTries=10, minBackoff=2 sec, maxBackoff=30 sec:
+
+            ::
+
+                #   delay     total time
+                01: 00:00.00  00:00.00
+                02: 00:02.09  00:02.10
+                03: 00:02.20  00:04.30
+                04: 00:02.46  00:06.76
+                05: 00:02.98  00:09.75
+                06: 00:04.03  00:13.78
+                07: 00:06.10  00:19.88
+                08: 00:10.21  00:30.10
+                09: 00:18.47  00:48.58
+                10: 00:35.03  01:23.61
+
+            .. image:: flow-retry-expnormalized.png
 
     .. function:: CreateCallbackRetryStrategy(RetryCallback callback)
 
@@ -28,7 +96,7 @@ Method to affect application flow.
 
     .. code-block:: c#
 
-            // async repeat with fixed delay strategy
+            // Async repeat with fixed delay strategy.
             FlowUtils.RetryAsync(() =>
                 {
                     return SendEmail("email");
@@ -38,7 +106,7 @@ Method to affect application flow.
                 typeof(SmtpException)
             );
 
-            // use increment delay retry strategy with logging
+            // Use increment delay retry strategy with logging.
             FlowUtils.Retry(() =>
                 {
                     // action
