@@ -1,5 +1,7 @@
 ﻿0.4.9 [TBD]
 [*] Fix pagination usage when page size is int.MaxSize .
+[+] Add Exponential Backoff Normalized delay retry strategy to flow utils.
+[-] Remove firstFastRetry parameter from exponential backoff retry strategies.
 
 0.4.8 [2018-07-12]
 [+] Add DictionaryUtils.GetValueOrDefault and DictionaryUtils.GetValuesOrDefault for NameValueCollection.
